--- a/math/py-pywavelets/Makefile
+++ b/math/py-pywavelets/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2024/10/14 06:45:51 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/14 16:49:13 adam Exp $
 
-DISTNAME=	pywavelets-1.7.0
+DISTNAME=	pywavelets-1.8.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyWavelets/}
@@ -13,10 +13,10 @@ LICENSE=	mit
 TOOL_DEPENDS+=	${PYPKGPREFIX}-cython>=3.0.4:../../devel/py-cython
 TOOL_DEPENDS+=	${PYPKGPREFIX}-meson_python>=0.16.0:../../devel/py-meson_python
 
+USE_CC_FEATURES=	c17
+
 REPLACE_PYTHON+=	pywt/data/create_dat.py
 REPLACE_PYTHON+=	pywt/tests/*.py
-
-USE_CC_FEATURES=		c17
 
 pre-configure:
 	${LN} -sf ${PREFIX}/bin/cython-${PYVERSSUFFIX} ${BUILDLINK_DIR}/bin/cython
