--- a/misc/py-icecream/Makefile
+++ b/misc/py-icecream/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2023/07/18 15:46:27 adam Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/14 16:58:59 adam Exp $
 
-DISTNAME=	icecream-2.1.3
+DISTNAME=	icecream-2.1.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	misc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/icecream/}
@@ -10,15 +10,13 @@ HOMEPAGE=	https://github.com/gruns/icecream
 COMMENT=	Never use print() to debug again
 LICENSE=	mit
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-asttokens>=2.0.1:../../lang/py-asttokens
 DEPENDS+=	${PYPKGPREFIX}-colorama>=0.3.9:../../comms/py-colorama
-DEPENDS+=	${PYPKGPREFIX}-executing>=0.3.1:../../lang/py-executing
+DEPENDS+=	${PYPKGPREFIX}-executing>=2.1.0:../../lang/py-executing
 DEPENDS+=	${PYPKGPREFIX}-pygments>=2.2.0:../../textproc/py-pygments
-#TEST_DEPENDS+=	${PYPKGPREFIX}-test>=6.2.4:../../devel/py-test
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
