--- a/devel/py-doctor/Makefile
+++ b/devel/py-doctor/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2024/11/11 07:28:07 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2025/01/14 17:20:33 adam Exp $
 
-DISTNAME=	pydoctor-24.3.3
+DISTNAME=	pydoctor-24.11.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
 CATEGORIES=	devel textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pydoctor/}
@@ -11,15 +11,14 @@ COMMENT=	Python API document generator
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-appdirs-[0-9]*:../../devel/py-appdirs
 DEPENDS+=	${PYPKGPREFIX}-attrs-[0-9]*:../../devel/py-attrs
 DEPENDS+=	${PYPKGPREFIX}-configargparse-[0-9]*:../../devel/py-configargparse
-DEPENDS+=	${PYPKGPREFIX}-cachecontrol-[0-9]*:../../devel/py-cachecontrol
+DEPENDS+=	${PYPKGPREFIX}-cachecontrol>=0.12.14:../../devel/py-cachecontrol
 DEPENDS+=	${PYPKGPREFIX}-docutils>=0.17:../../textproc/py-docutils
 DEPENDS+=	${PYPKGPREFIX}-lunr>=0.6.2:../../textproc/py-lunr
+DEPENDS+=	${PYPKGPREFIX}-platformdirs-[0-9]*:../../misc/py-platformdirs
 DEPENDS+=	${PYPKGPREFIX}-requests-[0-9]*:../../devel/py-requests
 DEPENDS+=	${PYPKGPREFIX}-twisted-[0-9]*:../../net/py-twisted
-DEPENDS+=	${PYPKGPREFIX}-toml-[0-9]*:../../textproc/py-toml
 DEPENDS+=	${PYPKGPREFIX}-urllib3>=2.0:../../www/py-urllib3
 TEST_DEPENDS+=	${PYPKGPREFIX}-beautifulsoup4-[0-9]*:../../www/py-beautifulsoup4
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis-[0-9]*:../../devel/py-hypothesis
@@ -27,6 +26,11 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-sphinx-[0-9]*:../../textproc/py-sphinx
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-subtests-[0-9]*:../../devel/py-test-subtests
 
 USE_LANGUAGES=	# none
+
+.include "../../lang/python/pyversion.mk"
+.if ${PYTHON_VERSION} < 311
+DEPENDS+=	${PYPKGPREFIX}-toml-[0-9]*:../../textproc/py-toml
+.endif
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
