--- a/www/unit/Makefile
+++ b/www/unit/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.21 2025/01/05 18:24:34 osa Exp $
+# $NetBSD: Makefile,v 1.22 2025/01/14 17:45:00 osa Exp $
 
 .include "../../www/unit/version.mk"
 
 DISTNAME=	unit-${UNIT_VERSION}
+PKGREVISION=	1
 
 COMMENT=	Dynamic web application server
 
