--- a/editors/ait/Makefile
+++ b/editors/ait/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2024/12/06 16:31:13 ktnb Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/14 18:50:14 ktnb Exp $
 
 DISTNAME=	1.10
 PKGNAME=	ait-${DISTNAME}
@@ -10,6 +10,10 @@ MAINTAINER=	ktnb@NetBSD.org
 HOMEPAGE=	https://notabug.org/nuclearkev/ait/
 COMMENT=	Small but mighty GNU Emacs style editor
 LICENSE=	modified-bsd
+
+# termbox doesn't compile on these systems
+BROKEN_ON_PLATFORM=	SmartOS-*-*
+BROKEN_ON_PLATFORM+=	OpenBSD-*-*
 
 WRKSRC=		${WRKDIR}/ait
 MAKE_FILE=	makefile
