--- a/pkgtools/mktool/Makefile
+++ b/pkgtools/mktool/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2025/01/13 11:24:47 jperkin Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/14 20:47:31 wiz Exp $
 
-DISTNAME=	mktool-1.4.1
+DISTNAME=	mktool-1.4.2
 CATEGORIES=	pkgtools
 MASTER_SITES=	${MASTER_SITE_GITHUB:=jperkin/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
