--- a/databases/py-lmdb/Makefile
+++ b/databases/py-lmdb/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/11/11 07:27:57 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/14 22:50:48 adam Exp $
 
-DISTNAME=	lmdb-1.5.1
+DISTNAME=	lmdb-1.6.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	databases python
 MASTER_SITES=	${MASTER_SITE_PYPI:=l/lmdb/}
@@ -13,8 +13,6 @@ LICENSE=	modified-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_TOOLS+=	patch
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../databases/lmdb/buildlink3.mk"
 .include "../../lang/python/wheel.mk"
