--- a/net/kea/Makefile
+++ b/net/kea/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2024/12/29 15:09:57 adam Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/15 06:05:13 wiz Exp $
 
 DISTNAME=	kea-${VERSION}
 COMMENT=	Next-generation ISC Dynamic Host Configuration Protocol (DHCP) Server
-PKGREVISION=	1
+PKGREVISION=	2
 
 .include "options.mk"
 
