--- a/devel/py-fixtures/Makefile
+++ b/devel/py-fixtures/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2024/11/11 07:28:08 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/15 08:02:00 adam Exp $
 
-DISTNAME=	fixtures-4.1.0
+DISTNAME=	fixtures-4.2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=f/fixtures/}
@@ -10,8 +10,8 @@ HOMEPAGE=	https://pypi.python.org/pypi/fixtures/
 COMMENT=	Fixtures, reusable state for writing clean tests and more
 LICENSE=	apache-2.0 OR modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-pbr>=0:../../devel/py-pbr
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-pbr>=5.7.0:../../devel/py-pbr
 # needs py-testtools for testing, but that depends on this
 #TEST_DEPENDS+=	${PYPKGPREFIX}-testtools-[0-9]*:../../devel/py-testtools
 
