--- a/textproc/py-ftfy/Makefile
+++ b/textproc/py-ftfy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2024/08/06 06:28:26 adam Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/15 12:46:12 adam Exp $
 
-DISTNAME=	ftfy-6.2.3
+DISTNAME=	ftfy-6.3.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=f/ftfy/}
@@ -10,12 +10,10 @@ HOMEPAGE=	https://github.com/LuminosoInsight/python-ftfy
 COMMENT=	Fixes some problems with Unicode text after the fact
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-wcwidth>=0.2.12:../../devel/py-wcwidth
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
