--- a/databases/sqlite3/Makefile
+++ b/databases/sqlite3/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.161 2024/12/26 22:04:28 riastradh Exp $
+# $NetBSD: Makefile,v 1.162 2025/01/15 15:23:41 adam Exp $
 
 .include "Makefile.common"
 
 DISTNAME=	sqlite-autoconf-${SQLITE3_DISTVERSION}
 PKGNAME=	sqlite3-${SQLITE3_VERSION}
-PKGREVISION=	1
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
