--- a/devel/tokei/Makefile
+++ b/devel/tokei/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.11 2024/11/10 21:27:14 pin Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/15 21:20:23 pin Exp $
 
-DISTNAME=	v13.0.0-alpha.7
-PKGNAME=	${GITHUB_PROJECT}-13.0.0.alpha7
+DISTNAME=	v13.0.0-alpha.8
+PKGNAME=	${GITHUB_PROJECT}-13.0.0.alpha8
 CATEGORIES=	devel textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=XAMPPRocky/}
 GITHUB_PROJECT=	tokei
-GITHUB_TAG=	v13.0.0-alpha.7
+GITHUB_TAG=	v13.0.0-alpha.8
 
 MAINTAINER=	pin@NetBSD.org
 HOMEPAGE=	https://github.com/XAMPPRocky/tokei/
@@ -14,9 +14,7 @@ LICENSE=	apache-2.0 AND mit
 
 .include "cargo-depends.mk"
 
-#RUST_REQ=		1.82.0
-#Upstream does not state the required MSRV.
-#This package is confirmed to build with Rust 1.82.0 on amd64
+RUST_REQ=		1.71.0
 USE_LANGUAGES+=		c c++
 USE_TOOLS+=		pkg-config
 
