--- a/multimedia/t-rec/Makefile
+++ b/multimedia/t-rec/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2024/12/27 21:36:40 pin Exp $
+# $NetBSD: Makefile,v 1.29 2025/01/15 21:21:31 pin Exp $
 
-DISTNAME=	t-rec-rs-0.7.6
-PKGNAME=	t-rec-0.7.6
-PKGREVISION=	21
+DISTNAME=	t-rec-rs-0.7.8
+PKGNAME=	t-rec-0.7.8
 CATEGORIES=	multimedia
 MASTER_SITES=	${MASTER_SITE_GITHUB:=sassman/}
 GITHUB_PROJECT=	t-rec-rs
@@ -17,6 +16,9 @@ TOOL_DEPENDS+=	glib2-[0-9]*:../../devel/glib2
 
 .include "cargo-depends.mk"
 
+#RUST_REQ=	1.83.0
+#Upstream does not state the required MSRV.
+#This package is confirmed to build with Rust 1.83.0 on amd64
 USE_TOOLS+=		pkg-config
 
 INSTALLATION_DIRS=	bin
