--- a/www/py-django-import-export/Makefile
+++ b/www/py-django-import-export/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.33 2024/11/11 07:29:19 wiz Exp $
+# $NetBSD: Makefile,v 1.34 2025/01/16 09:39:53 adam Exp $
 
-DISTNAME=	django_import_export-4.1.1
+DISTNAME=	django_import_export-4.3.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/django-import-export/}
@@ -12,9 +12,9 @@ LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=60:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=7.1.0:../../devel/py-setuptools_scm
-DEPENDS+=	${PYPKGPREFIX}-diff-match-patch-[0-9]*:../../textproc/py-diff-match-patch
-DEPENDS+=	${PYPKGPREFIX}-django>=3.2:../../www/py-django
-DEPENDS+=	${PYPKGPREFIX}-tablib>=3.5.0:../../textproc/py-tablib
+DEPENDS+=	${PYPKGPREFIX}-diff-match-patch>=20241021:../../textproc/py-diff-match-patch
+DEPENDS+=	${PYPKGPREFIX}-django>=4.2:../../www/py-django
+DEPENDS+=	${PYPKGPREFIX}-tablib>=3.7.0:../../textproc/py-tablib
 
 USE_LANGUAGES=	# none
 
