--- a/meta-pkgs/lxqt/Makefile
+++ b/meta-pkgs/lxqt/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.33 2024/12/26 05:28:46 pin Exp $
+# $NetBSD: Makefile,v 1.34 2025/01/16 13:42:08 pin Exp $
 
 PKGNAME=	lxqt-2.1.0
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	meta-pkgs
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -18,7 +18,7 @@ DEPENDS+=	libqtxdg>=4.1.0:../../x11/libqtxdg
 DEPENDS+=	qtxdg-tools>=4.1.0:../../x11/qtxdg-tools
 DEPENDS+=	liblxqt>=2.1.0:../../x11/liblxqt
 DEPENDS+=	lxqt-menu-data>=2.1.0:../../sysutils/lxqt-menu-data
-DEPENDS+=	libfm-qt>=2.1.0:../../x11/libfm-qt
+DEPENDS+=	libfm-qt>=2.1.0nb1:../../x11/libfm-qt
 DEPENDS+=	lxqt-themes>=2.1.0:../../graphics/lxqt-themes
 DEPENDS+=	pavucontrol-qt>=2.1.0:../../audio/pavucontrol-qt
 DEPENDS+=	qtermwidget>=2.1.0:../../x11/qtermwidget
@@ -36,9 +36,9 @@ DEPENDS+=	lxqt-qtplugin>=2.1.0:../../x11/lxqt-qtplugin
 DEPENDS+=	lxqt-session>=2.1.1:../../x11/lxqt-session
 DEPENDS+=	lxqt-sudo>=2.1.0:../../security/lxqt-sudo
 DEPENDS+=	pcmanfm-qt>=2.1.0:../../sysutils/pcmanfm-qt
-DEPENDS+=	qterminal>=2.1.0:../../x11/qterminal
-DEPENDS+=	lxqt-panel>=2.1.3:../../x11/lxqt-panel
-DEPENDS+=	lxqt-runner>=2.1.0:../../x11/lxqt-runner
+DEPENDS+=	qterminal>=2.1.0nb1:../../x11/qterminal
+DEPENDS+=	lxqt-panel>=2.1.4:../../x11/lxqt-panel
+DEPENDS+=	lxqt-runner>=2.1.1:../../x11/lxqt-runner
 DEPENDS+=	screengrab>=2.9.0:../../graphics/screengrab
 DEPENDS+=	lxqt-archiver>=1.1.0:../../archivers/lxqt-archiver
 # The Breeze icon set is the default that LXQt expects, and a compatible icon
