--- a/devel/ruby-activesupport80/Makefile
+++ b/devel/ruby-activesupport80/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2025/01/02 07:02:34 taca Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/16 14:36:02 wiz Exp $
 
 DISTNAME=	activesupport-${RAILS_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-activesupport${RUBY_RAILS}-${RAILS_VERSION}
@@ -18,6 +18,8 @@ USE_LANGUAGES=	# none
 
 RUBY_RAILS_ACCEPTED=	80
 RUBY_RAILS_STRICT_DEP=	yes
+
+RUBY_VERSIONS_INCOMPATIBLE=	31
 
 .include "../../lang/ruby/rubyversion.mk"
 .if ${RUBY_VER} < 33
