--- a/devel/py-guppy3/Makefile
+++ b/devel/py-guppy3/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2025/01/13 23:34:20 gutteridge Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/16 22:08:58 gutteridge Exp $
 
 DISTNAME=	guppy3-3.1.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=g/guppy3/}
 
@@ -11,6 +12,7 @@ COMMENT=	Python programming environment and heap analysis toolset
 LICENSE=	mit
 
 DEPENDS+=	${PYPKGPREFIX}-Tk-[0-9]*:../../x11/py-Tk
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=70.1:../../devel/py-setuptools
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
