--- a/textproc/py-sphinx-autodoc-typehints/Makefile
+++ b/textproc/py-sphinx-autodoc-typehints/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2025/01/07 12:43:47 wiz Exp $
+# $NetBSD: Makefile,v 1.33 2025/01/16 22:19:26 adam Exp $
 
-DISTNAME=	sphinx_autodoc_typehints-3.0.0
+DISTNAME=	sphinx_autodoc_typehints-3.0.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/sphinx-autodoc-typehints/}
@@ -11,11 +11,11 @@ COMMENT=	Type hints support for the Sphinx autodoc extension
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatch-vcs>=0.4:../../devel/py-hatch-vcs
-TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=1.25:../../devel/py-hatchling
-DEPENDS+=	${PYPKGPREFIX}-sphinx>=8.0.2:../../textproc/py-sphinx
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=1.27:../../devel/py-hatchling
+DEPENDS+=	${PYPKGPREFIX}-sphinx>=8.1.3:../../textproc/py-sphinx
 TEST_DEPENDS+=	${PYPKGPREFIX}-covdefaults>=2.3:../../devel/py-covdefaults
-TEST_DEPENDS+=	${PYPKGPREFIX}-sphobjinv>=2.3.1:../../textproc/py-sphobjinv
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=5:../../devel/py-test-cov
+TEST_DEPENDS+=	${PYPKGPREFIX}-sphobjinv>=2.3.1.2:../../textproc/py-sphobjinv
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=6:../../devel/py-test-cov
 TEST_DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.12.2:../../devel/py-typing-extensions
 
 USE_LANGUAGES=	# none
