--- a/textproc/py-sphinxygen/Makefile
+++ b/textproc/py-sphinxygen/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2024/11/11 07:29:09 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/16 22:21:36 adam Exp $
 
-DISTNAME=	sphinxygen-1.0.4
+DISTNAME=	sphinxygen-1.0.6
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/sphinxygen/}
@@ -11,6 +11,7 @@ COMMENT=	Script to generate Sphinx ReST from Doxygen XML
 LICENSE=	isc
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.2:../../devel/py-setuptools
+TEST_DEPENDS+=	${PYPKGPREFIX}-html5lib-[0-9]*:../../textproc/py-html5lib
 
 USE_LANGUAGES=	# none
 
