--- a/math/qhull/Makefile
+++ b/math/qhull/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2024/08/25 06:19:01 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/16 23:04:22 wiz Exp $
 
 DISTNAME=	qhull-2020-src-${LIBVERSION}
 PKGNAME=	qhull-2020.2
@@ -29,9 +29,14 @@ PKGCONFIG_OVERRIDE=	build/qhull.pc.in
 post-extract:
 	rm -f ${WRKSRC}/eg/q_benchmark ${WRKSRC}/eg/qhull-zip.sh
 
+.include "../../devel/cmake/build.mk"
+
 # libqhull is deprecated
 post-build:
+.if ${CMAKE_GENERATOR} == "make"
 	cd ${WRKSRC}/${CMAKE_BUILD_DIR} && make libqhull
+.else
+	cd ${WRKSRC}/${CMAKE_BUILD_DIR} && ninja libqhull
+.endif
 
-.include "../../devel/cmake/build.mk"
 .include "../../mk/bsd.pkg.mk"
