--- a/www/py-djangocms-attributes-field/Makefile
+++ b/www/py-djangocms-attributes-field/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2023/10/10 16:45:25 adam Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/17 08:24:59 adam Exp $
 
-DISTNAME=	djangocms-attributes-field-3.0.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	djangocms_attributes_field-4.0.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/djangocms-attributes-field/}
 
@@ -14,7 +14,5 @@ DEPENDS+=	${PYPKGPREFIX}-django-cms>=3.7:../../www/py-django-cms
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
