--- a/www/py-djangocms-link/Makefile
+++ b/www/py-djangocms-link/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/11/11 07:29:21 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/17 08:27:10 adam Exp $
 
-DISTNAME=	djangocms_link-4.0.0
+DISTNAME=	djangocms_link-5.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/djangocms-link/}
@@ -11,8 +11,8 @@ COMMENT=	Django CMS plugin that allows to add links
 LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-django-cms>=3.7:../../www/py-django-cms
-DEPENDS+=	${PYPKGPREFIX}-django-filer>=1.7:../../www/py-django-filer
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
+DEPENDS+=	${PYPKGPREFIX}-django-cms>=4.1.3:../../www/py-django-cms
 DEPENDS+=	${PYPKGPREFIX}-djangocms-attributes-field>=1.0:../../www/py-djangocms-attributes-field
 
 USE_LANGUAGES=	# none
