--- a/sysutils/fastfetch/Makefile
+++ b/sysutils/fastfetch/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2025/01/13 20:46:08 vins Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/17 16:28:09 vins Exp $
 
 DISTNAME=	fastfetch-2.34.1
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=fastfetch-cli/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
@@ -16,6 +17,14 @@ USE_LANGUAGES=	c c++
 
 DEPENDS+=	hwdata-[0-9]*:../../misc/hwdata
 
+.include "../../mk/bsd.prefs.mk"
+
+SUBST_CLASSES+=		db
+SUBST_STAGE.db=		pre-configure
+SUBST_MESSAGE.db=	Setting pkgsrc database dir.
+SUBST_FILES.ds+=	src/detection/packages/packages_obsd.c
+SUBST_SED.db+=		-e "s:/usr/pkg/pkgdb:${PKG_DBDIR}:g"
+
 CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Release \
 			-DCMAKE_INSTALL_PREFIX='${PREFIX}' \
 			-DTARGET_DIR_USR='${PREFIX}' \
@@ -27,6 +36,8 @@ CMAKE_CONFIGURE_ARGS+=	-DCMAKE_BUILD_TYPE=Release \
 			-DBUILD_TESTS=ON
 
 .include "options.mk"
+
+
 
 .include "../../sysutils/libpciaccess/buildlink3.mk"
 .include "../../devel/yyjson/buildlink3.mk"
