--- a/devel/bpython/Makefile
+++ b/devel/bpython/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.43 2024/10/14 06:45:35 wiz Exp $
+# $NetBSD: Makefile,v 1.44 2025/01/17 19:21:09 adam Exp $
 
-DISTNAME=	bpython-0.24
-PKGREVISION=	3
+DISTNAME=	bpython-0.25
 CATEGORIES=	devel python
-MASTER_SITES=	https://bpython-interpreter.org/releases/
+MASTER_SITES=	${MASTER_SITE_PYPI:=b/bpython/}
 
 MAINTAINER=	imil@NetBSD.org
 HOMEPAGE=	https://bpython-interpreter.org/
@@ -12,6 +11,7 @@ LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-babel-[0-9]*:../../devel/py-babel
 TOOL_DEPENDS+=	${PYPKGPREFIX}-sphinx-[0-9]*:../../textproc/py-sphinx
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=62.4.0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-curtsies>=0.4.0:../../devel/py-curtsies
 DEPENDS+=	${PYPKGPREFIX}-cwcwidth-[0-9]*:../../devel/py-cwcwidth
 DEPENDS+=	${PYPKGPREFIX}-greenlet-[0-9]*:../../devel/py-greenlet
@@ -22,11 +22,14 @@ DEPENDS+=	${PYPKGPREFIX}-xdg-[0-9]*:../../devel/py-xdg
 
 USE_LANGUAGES=	# none
 
-USE_PKG_RESOURCES=	yes
-
 PYTHON_VERSIONS_INCOMPATIBLE=	39 # py-sphinx
 
+.include "../../lang/python/pyversion.mk"
+.if ${PYTHON_VERSION} < 311
+DEPENDS+=	${PYPKGPREFIX}-typing-extensions-[0-9]*:../../devel/py-typing-extensions
+.endif
+
 .include "../../lang/python/batteries-included.mk"
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../mk/bsd.pkg.mk"
