--- a/devel/py-bugzilla/Makefile
+++ b/devel/py-bugzilla/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/04/29 18:57:35 bsiegert Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/17 19:29:03 adam Exp $
 
-DISTNAME=	python-bugzilla-3.2.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
+DISTNAME=	python_bugzilla-3.3.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/python_//}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-bugzilla/}
 
@@ -11,14 +10,11 @@ HOMEPAGE=	https://github.com/python-bugzilla/python-bugzilla
 COMMENT=	Bugzilla XMLRPC access module
 LICENSE=	gnu-gpl-v2
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-requests-[0-9]*:../../devel/py-requests
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+TEST_DEPENDS+=	${PYPKGPREFIX}-responses-[0-9]*:../../net/py-responses
 
 USE_LANGUAGES=	# none
-
-USE_PKG_RESOURCES=	yes
 
 SUBST_CLASSES+=		mandir
 SUBST_STAGE.mandir=	pre-configure
@@ -31,8 +27,5 @@ post-install:
 	${MV} bin/bugzilla bin/bugzilla-${PYVERSSUFFIX} && \
 	${MV} ${PKGMANDIR}/man1/bugzilla.1 ${PKGMANDIR}/man1/bugzilla-${PYVERSSUFFIX}.1 || ${TRUE}
 
-do-test:
-	cd ${WRKSRC} && pytest-${PYVERSSUFFIX} tests
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
